# SecureChat

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements.txt  vercel.json  vite.config.ts
api/: messages.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: crypto.rs  identity.rs  mod.rs
src-tauri/src/storage/: contacts_repo.rs  database.rs  identity_repo.rs  messages_repo.rs  mod.rs
src-tauri/src/tor_manager/: client.rs  kill_switch.rs  mod.rs  onion_service.rs  status.rs
src/components/: AddContact.tsx  ChatView.tsx  ContactList.tsx  IdentitySetup.tsx  Landing.tsx  Layout.tsx  PasswordStrengthIndicator.tsx  PatternLock.tsx  ProfileScreen.tsx  SafetyVerification.tsx  TorStatus.tsx  UnlockScreen.tsx
src/lib/: tauri-core.ts  tauri-event.ts
src/stores/: contactStore.ts  identityStore.ts  messageStore.ts  patternStore.ts  torStore.ts
