[package]
name = "anon-chat"
version = "0.1.0"
description = "A privacy-preserving anonymous chat application over Tor"
authors = ["Anon-Chat Contributors"]
edition = "2021"

[lib]
name = "anon_chat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
arti-client = { version = "0.13", default-features = false, features = [
    "tokio", "rustls", "onion-service-client",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
futures = "0.3"
tor-rtcompat = { version = "0.9", features = ["tokio"] }

# --- Phase 1 dependencies ---
ed25519-dalek = "2"
sha2 = "0.10"
sha3 = "0.10"
base32 = "0.5"
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rusqlite = { version = "0.30", features = ["bundled"] }
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.8"
hex = "0.4"
base64 = "0.22"
